HTTP_Routing/2.2_HTTPRouteMatch_Hostname/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
# 2.2 Exact hostname
# Host: coffee.f5bnk.com 만 coffee-pool 로 전달
# Wildcard 와 겹치면 Exact 가 우선
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hostname-exact-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com

---
# 2.2 Wildcard hostname
# *.f5bnk.com → shop.f5bnk.com, a.b.f5bnk.com 매칭
# apex f5bnk.com 은 매칭하지 않음 (GW API v1.6)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hostname-wildcard-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - "*.f5bnk.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com
